--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UBFOFTPWP0nwiDbmS88LvlPWfUEtL0nHqgN0QpQBf8k=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=techie_petrocom
-DB_USERNAME=techie_petrocom
-DB_PASSWORD=techie_petrocom
+DB_DATABASE=petrocom
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
